--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ tasks.named("bootJar") {
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:4.4.0_350'
+    implementation 'net.dv8tion:JDA:5.0.0-beta.6'
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
     implementation 'com.github.aikaterna:lavaplayer-natives:original-SNAPSHOT'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
@@ -73,6 +73,8 @@ dependencies {
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
+
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
